src/objects/PropRecipient__c.object
<CustomObject>
    <fields>
        <fullName>AddeProp__c</fullName>
        <label>AddeProp</label>
        <referenceTo>AddeProp__c</referenceTo>
        <relationshipLabel>Prop Recipients</relationshipLabel>
        <relationshipName>PropRecipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RecipientName__c</fullName>
        <inlineHelpText>The full name of the recipient for this addeprop</inlineHelpText>
        <label>Recipient Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <externalId>true</externalId>
        <label>UserName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Prop Recipient</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RecipientName__c</columns>
        <columns>UserName__c</columns>
        <columns>NAME</columns>
        <columns>AddeProp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>pr{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>Prop Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prop Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>